# projeto-ed-final

./: .gitattributes  .gitignore  404.html  Installation _ Laravel 13.x - The clean stack for Artisans and agents.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
Docs/: index.md
Docs/dashboard/: index.md
Docs/dev/: convencoes.md  pull-request.md
Docs/guias/: README.md  faker.md  minio.md  uv.md
Docs/infra/: airflow.md  docker.md  index.md  minio.md  postgres.md  spark.md
Docs/modelo/: dimensional.md  origem.md
Docs/pipeline/: bronze.md  faker.md  gold.md  index.md  landing.md  silver.md
Docs/quickstart/: faker.md  instalacao.md  prerequisitos.md
dags/: dag_bronze.py  dag_gold.py  dag_landing.py  dag_pipeline_completo.py  dag_silver.py  dag_sparkeats_full.py  dag_sparkeats_incremental.py
dashboard/: index.html
dev/convencoes/: index.html
dev/pull-request/: index.html
docker/: Dockerfile.airflow  airflow-entrypoint.sh  docker-compose.yml
docker/airflow/: Dockerfile
docker/postgres/: init-airflow.sql
infra/: index.html
infra/airflow/: index.html
infra/docker/: index.html
infra/minio/: index.html
infra/postgres/: index.html
infra/spark/: index.html
modelo/dimensional/: index.html
modelo/origem/: index.html
pipeline/: index.html
scripts/: create_minio_buckets.sh  run_pipeline.py  seed_database.py  start-docker.sh  verify-minio.sh  verify-pipeline.sh  verify-postgres.sh  wsl-env.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
sql/: ddl_origem_postgresql.sql
(+40 files in other folders)
